// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFetcher should dispatch an action that fetches a create 1`] = `
Object {
  "meta": Object {
    "key": "POST http://test.com/article-cooler/",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/rpc",
    "schema": [Function],
    "throttle": false,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useFetcher should dispatch an action that fetches a full update 1`] = `
Object {
  "meta": Object {
    "key": "PUT http://test.com/article-cooler/1",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/rpc",
    "schema": [Function],
    "throttle": false,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useFetcher should dispatch an action that fetches a partial update 1`] = `
Object {
  "meta": Object {
    "key": "PATCH http://test.com/article-cooler/1",
    "optimisticResponse": Object {
      "content": "changed",
      "id": 1,
    },
    "options": Object {
      "optimisticUpdate": [Function],
    },
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/rpc",
    "schema": [Function],
    "throttle": false,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useFetcher should dispatch an action with multiple updaters in the meta if update shapes params are passed in 1`] = `
Object {
  "meta": Object {
    "key": "POST http://test.com/article/",
    "optimisticResponse": Object {
      "content": "hi",
    },
    "options": Object {
      "optimisticUpdate": [Function],
    },
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/rpc",
    "schema": [Function],
    "throttle": false,
    "updaters": Object {
      "GET http://test.com/article/": [Function],
      "http://test.com/article/some-list-url": [Function],
    },
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useFetcher should dispatch an action with updater in the meta if update shapes params are passed in 1`] = `
Object {
  "meta": Object {
    "key": "POST http://test.com/article-cooler/",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/rpc",
    "schema": [Function],
    "throttle": false,
    "updaters": Object {
      "GET http://test.com/article-cooler/": [Function],
    },
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch singles 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-cooler/5",
    "options": undefined,
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/receive",
    "schema": [Function],
    "throttle": true,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with fetch shape defined dataExpiryLength 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-static/5",
    "options": Object {
      "dataExpiryLength": 3600000,
    },
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/receive",
    "schema": [Function],
    "throttle": true,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with fetch shape defined errorExpiryLength 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-static/5",
    "options": Object {
      "dataExpiryLength": Infinity,
      "errorExpiryLength": Infinity,
    },
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/receive",
    "schema": [Function],
    "throttle": true,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;

exports[`useRetrieve should dispatch with resource defined dataExpiryLength 1`] = `
Object {
  "meta": Object {
    "key": "GET http://test.com/article-static/5",
    "options": Object {
      "dataExpiryLength": Infinity,
    },
    "promise": Promise {},
    "reject": [Function],
    "resolve": [Function],
    "responseType": "rest-hooks/receive",
    "schema": [Function],
    "throttle": true,
  },
  "payload": [Function],
  "type": "rest-hooks/fetch",
}
`;
